[gd_scene load_steps=2 format=3 uid="uid://c5vw3y8jx1234"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_main_menu"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.05, 0.05, 0.15, 1)

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -250.0
offset_right = 200.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "GRID TACTICS
[C] Continue  [N] New Game  [L] Load  [Q] Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
mouse_filter = 2

[node name="ContinueButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Continue"
custom_minimum_size = Vector2(0, 50)

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "New Game"
custom_minimum_size = Vector2(0, 50)

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Load Game"
custom_minimum_size = Vector2(0, 50)

[node name="Spacer2" type="Control" parent="MenuContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
mouse_filter = 2

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Quit"
custom_minimum_size = Vector2(0, 50)

[node name="SaveInfo" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "Current Save: Default"
horizontal_alignment = 1
